--- a/.github/workflows/ros2_foxy.yaml
+++ b/.github/workflows/ros2_foxy.yaml
@@ -4,7 +4,8 @@ on:
     workflow_dispatch:
     push:
         branches:
-            - main
+            - master
+            - 'releases/**'
 
 jobs:
     job_1:
